discussion/kv_engine/155194/155194_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Use the global executor from the core [WIP]

Move the tasks over to use the global executor

Change-Id: I33cd997a2a79544ab799af9321ca4a8cb208c711

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 11:51:07.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 13:45:19.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9600/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9600/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9600/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11324/ : FAILURE

Compile error at [2021-06-08T13:35:26.314Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11324/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11176/ : FAILURE

Compile error at [2021-06-08T13:31:43.412Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11176/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8198/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36555/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/143/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31236/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11596/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19179/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10247/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
